crates/ee-tests/src/snapshots/revm_ee_tests__revm_tests__frame_stack_index.snap
---
source: crates/ee-tests/src/revm_tests.rs
expression: "&result1"
---
{
  "Success": {
    "reason": "Stop",
    "gas": {
      "gas_spent": 21000,
      "state_gas_spent": 0,
      "gas_refunded": 0,
      "floor_gas": 0,
      "reservoir_remaining": 0
    },
    "logs": [],
    "output": {
      "Call": "0x"
    }
  }
}
